# stride

./: .gitignore  .gitmodules  LICENSE  README.md  TUTORIAL.md  context.md  pyproject.toml  requirements.txt  sweep.sh
ablations/: all_or_nothing.py  plot_aon.py
checkpoints/: bc_policy.pt  editor.pt  gaussian_filter_bc.pt  influence_weighted_bc.pt  stride_v2_direct_editor.pt  stride_v2_direct_vae.pt  tune_init_bc.pt  tune_vae.pt
checkpoints/trial_0/: bc_policy.pt  cupid_reimpl_bc.pt  gaussian_filter_bc.pt  random_latent_bc.pt  stride_bc.pt  stride_v2_direct_bc.pt  vae.pt
checkpoints/trial_1/: bc_policy.pt  editor.pt  gaussian_filter_bc.pt  influence_weighted_bc.pt  random_latent_bc.pt  stride_bc.pt  vae.pt
checkpoints/trial_2/: bc_policy.pt  editor.pt  gaussian_filter_bc.pt  influence_weighted_bc.pt  random_latent_bc.pt  stride_bc.pt  vae.pt
checkpoints/trial_3/: bc_policy.pt  editor.pt  gaussian_filter_bc.pt  influence_weighted_bc.pt  random_latent_bc.pt  stride_bc.pt  (+1 more)
configs/: bc_lift_mh.json
experiments/: benchmark.py  configs.py  plot_results.py  run_all.py  run_chiling_job.sh  run_experiments.py  run_part1_job.sh  run_part2_job.sh  run_timothy_job.sh  submit_chiling.sh  submit_part1.sh  submit_part2.sh  submit_timothy.sh  tune_stride.py
instructions/: chiling.md  timothy.md
results/: benchmark_pen_results.json  results.json  results_old.json
scripts/: compute_eval_summaries.py  run_filtering_pipeline.sh  run_gaussian_filtering_sweep.sh  submit_filtering.sh
stride/: __init__.py  data.py  editing.py  influence.py  scoring.py
wandb/: latest-run
(+77 files in other folders)
