[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stride"
version = "0.1.0"
description = "STRIDE - CS229 Final Project"
readme = "README.md"
authors = ["Yash Ranjith <yranjith@stanford.edu>"]
packages = [{ include = "stride" }]

[tool.poetry.dependencies]
python = ">=3.9"
cmake = "3.22"
mujoco = "3.3.7"
wandb = "*"
robomimic = { path = "external/robomimic", develop = true }
robosuite = { path = "external/robosuite", develop = true }
